--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
