--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.1",
+    "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
