--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -16,7 +17,7 @@
     "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "moment": "^2.30.1",
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,8 +31,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.8.1",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
